--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "y2k-roast-arcade",
+  "name": "roast-arena",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,13 +12,10 @@
     "@reown/appkit-adapter-solana": "1.7.3",
     "@reown/appkit-adapter-wagmi": "1.7.3",
     "@solana/web3.js": "^1.95.8",
-    "@wagmi/core": "^2.16.3",
-    "viem": "^2.22.8",
-    "wagmi": "^2.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^4.4.9"
   }
 }
