--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roast-arena",
+  "name": "y2k-roast-arcade",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,13 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-  "@reown/appkit": "2.0.3",
-  "@reown/appkit-adapter-solana": "2.0.3",
-  "@reown/appkit-adapter-wagmi": "2.0.3",
-  "@solana/web3.js": "^1.95.8",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0"
-}
+    "@reown/appkit": "2.0.3",
+    "@reown/appkit-adapter-solana": "2.0.3",
+    "@reown/appkit-adapter-wagmi": "2.0.3",
+    "@solana/web3.js": "^1.95.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "vite": "^4.4.9"
   }
